--- a/ec/app/templates/admin/sidebar.html
+++ b/ec/app/templates/admin/sidebar.html
@@ -125,7 +125,7 @@
 <body>
     <!-- Sidebar -->
     <div id="sidebar">
-        <h2>Stationay Shop</h2>
+        <h2>Stationary Shop</h2>
         <a href="{% url 'product_list' %}"><i class="fas fa-box"></i> <span>Products</span></a>
         <a href="{% url 'customer_list' %}"><i class="fas fa-users"></i> <span>Customers</span></a>
         <a href="{% url 'cart_list' %}"><i class="fas fa-shopping-cart"></i> <span>Cart</span></a>
