--- a/ec/app/templates/admin/order_list.html
+++ b/ec/app/templates/admin/order_list.html
@@ -34,8 +34,10 @@
                 <td>{{ order.status }}</td>
                 <td>{{ order.payment }}</td>
                 <td>
-                    <a href="{% url 'order_edit' order.id %}" class="button">Edit</a>
-                    <a href="{% url 'order_delete' order.id %}" class="button" onclick="return confirm('Are you sure you want to delete this order?');">Delete</a>
+                    <div class="action-buttons">
+                        <a href="{% url 'order_edit' order.id %}" class="button">Edit</a>
+                        <a href="{% url 'order_delete' order.id %}" class="button" onclick="return confirm('Are you sure you want to delete this order?');">Delete</a>
+                    </div>
                 </td>
             </tr>
             {% endfor %}
@@ -98,7 +100,14 @@
     }
 
     .button:hover {
-        background-color: #218838; /* Darker blue on hover */
+        background-color: #218838; /* Darker green on hover */
+    }
+
+    /* New styles for action buttons */
+    .action-buttons {
+        display: flex; /* Use flexbox for alignment */
+        justify-content: flex-start; /* Align buttons to the left */
     }
 </style>
 {% endblock %}
+
