--- a/ec/app/templates/app/home.html
+++ b/ec/app/templates/app/home.html
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock title %}
 
 {% block banner-slider %}
-<div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleControlsTouch" class="carousel slide" data-bs-ride="carousel" data-bs-touch="true" data-bs-interval="3000">
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="{% static 'app/images/banner/b1.jpg' %}" class="d-block w-100" alt="banner image">
@@ -11,13 +11,21 @@
         <div class="carousel-item">
             <img src="{% static 'app/images/banner/b2.jpg' %}" class="d-block w-100" alt="banner image">
         </div>
-        <!-- <div class="carousel-item">
-            <img src="{% static 'app/images/banner/banner3.jpg' %}" class="d-block w-100" alt="banner image">
+        <div class="carousel-item">
+            <img src="{% static 'app/images/banner/b3.jpg' %}" class="d-block w-100" alt="banner image">
         </div>
         <div class="carousel-item">
-            <img src="{% static 'app/images/banner/banner4.jpg' %}" class="d-block w-100" alt="banner image">
-        </div> -->
+            <img src="{% static 'app/images/banner/b4.jpg' %}" class="d-block w-100" alt="banner image">
+        </div>
     </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsTouch" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsTouch" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
 </div>
 {% endblock banner-slider %}
 
@@ -170,11 +178,13 @@
             <div class="col-md-6 col-lg-3">
                 <div class="contact-info text-center">
                     <div class="contact-icon">
-                        <i class="fa fa-envelope"></i>
+                        <a href="{% url 'send_contact_email' %}">
+                        <i class="fa fa-envelope text-dark"></i>
+                        </a>
                     </div>
                     <div class="contact-text">
                         <h3>Email Us</h3>
-                        <p>stationarystore@gmail.com</p>
+                        <p>chandruganesan19@gmail.com</p>
                     </div>
                 </div>
             </div>
